<resources>

    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_login">Login</string>
    <string name="app_name">Cimatec_Guide</string>
    <string name="welcome">Bem-Vindo!</string>
    <string name="courses">Cursos</string>
    <string name="graduation">Graduação</string>
    <string name="postgraduate">Pós Graduação</string>
    <string name="authorization_act">Ato de Autorização</string>
    <string name="student_manual">Manual do Aluno</string>
    <string name="disciplinary_rules">Regimento Disciplinar</string>
    <string name="disciplines">Disciplinas</string>
    <string name="leaders">Dirigentes</string>
    <string name="teachers">Docentes</string>
    <string name="curriculum">Matriz Curricular</string>
    <string name="bibliographic_collection">Acervo</string>
    <string name="course_pedagogical_project">Projeto Pedagógico do Curso</string>
    <string name="coordinator">Coordenador</string>
    <string name="duration">Duração</string>
    <string name="mec_evaluation">Avaliação do MEC</string>
    <string name="modality">Modalidade</string>
    <string name="shift">Turno</string>
    <string name="code">Código</string>
    <string name="monthly_payment">Mensalidade</string>
    <string name="about">Sobre</string>
    <string name="menu">Ementa</string>
    <string name="hiring">Regime</string>
    <string name="of"> de </string>
    <string name="quit_confirmation">Deseja realmente sair?</string>
    <string name="yes">SIM</string>
    <string name="not">NÂO</string>
    <string name="system_error">Erro no Sistema</string>

    <string name="title_dialog">Cimatec Guide informa</string>
    <string name="msg_dialog">Houve erro na conexão</string>
    <string name="msg_dialog_course">Carregando lista de Cursos, por favor aguarde...</string>
    <string name="msg_dialog_discipline">Carregando lista de Disciplinas, por favor aguarde...</string>
    <string name="msg_dialog_teacher">Carregando lista de Docentes, por favor aguarde...</string>
    <string name="quit">Sair</string>
    <string name="update">Atualizar</string>
    <string name="search">Pesquisar</string>
    <string name="search_course">Digite o nome do Curso</string>
    <string name="search_discipline">Digite o nome da Disciplina</string>
    <string name="search_teacher">Digite o nome do Docente</string>


    <string name="mantenedora">Mantenedora</string>
    <string name="mantenedora_texto1">Serviço Nacional de Aprendizagem Industrial SENAI-BA</string>
    <string name="diretor">Diretor de Tecnologia e Inovação do SENAI CIMATEC</string>
    <string name="diretor_texto">Leone Peter Correia da Silva Andrade</string>
    <string name="mantida">Mantida</string>
    <string name="mantida_texto1">Faculdade SENAI CIMATEC</string>
    <string name="mantida_texto2">Alex Álisson Bandeira Santos</string>
    <string name="coord_adm">Coordenação Administrativa Financeira</string>
    <string name="coord_adm_texto">Tatiana Gesteira de Almeida Ferraz</string>
    <string name="coord_grad">Coordenação da Graduação e Extensão</string>
    <string name="coord_grad_texto">Tarso Barreto Nogueira</string>
    <string name="coord_pos">Coordenação de Pós-Graduação e Pesquisa</string>
    <string name="coord_pos_texto">Alex Álisson Bandeira Santos</string>
    <string name="coord_ped">Coordenação Pedagógica</string>
    <string name="coord_ped_texto">Sayonara Nobre De Brito Lordelo</string>
    <string name="atend_ped">Atendimento Psicopedagógico</string>
    <string name="atend_ped_texto">Ana Carolina Santos de Lima</string>
    <string name="secret">Secretaria Acadêmica – Coordenação</string>
    <string name="secret_texto">Maria Verônica da Rocha Bamberg</string>
    <string name="secret_ac">Secretária Acadêmica</string>
    <string name="secret_ac_texto">Michela de Andrade Fernandes</string>
</resources>
