<android.support.v7.widget.CardView android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:contentPadding="5sp"
    app:cardBackgroundColor="@color/md_white_1000"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNameTeacher"
            android:textSize="20dp"
            android:textColor="@color/md_grey_900"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/code"
                android:textSize="12dp"
                android:textColor="@color/md_grey_900"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCodeTeacher"
                android:text=""
                android:textSize="12dp"
                android:textColor="@color/md_grey_900"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/hiring"
                android:textSize="12dp"
                android:textColor="@color/md_grey_900"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHiring"
                android:text="Noturno"
                android:textSize="12dp"
                android:textColor="@color/md_grey_900"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/btnShowDiscipline"
                android:text="@string/disciplines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="8dp"
                android:layout_weight="1"
                android:layout_marginRight="190dp"
                android:textColor="@color/md_white_1000"
                android:background="@color/md_indigo_700"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>